fix wrap block info

--- a/src/components/app/Layout/Info/Info.module.scss
+++ b/src/components/app/Layout/Info/Info.module.scss
@@ -1,22 +1,20 @@
 .blockInfo {
-    min-width: 1440px;
     background-color: var(--brand-light-blue);
     display: flex;
     justify-content: center;
 }
-.blockInfoWrapper1 {
-    width: 100%;
-    min-width: 1236px;
+.blockInfoWrapper {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-}
-.blockInfoWrapper {
-    display: flex;
+
+    @media screen and (max-width: 710px) {
+        justify-content: space-around;
+    }
 }
 .infoItem {
     min-width: 109px;
-    margin: 40px 82px;
+    margin: 40px 41px;
     text-align: center;
 }
 
